c/blink-SysTick/registers.h

#ifndef _REGISTERS_H_
#define _REGISTERS_H_

extern unsigned int RCC_AHBENR;

extern unsigned int GPIOB_MODER;
extern unsigned int GPIOB_PUPDR;
extern unsigned int GPIOB_ODR;
extern unsigned int GPIOB_BSRR;

extern unsigned int STK_CSR;
extern unsigned int STK_RVR;
extern unsigned int STK_CVR;
extern unsigned int STK_CALIB;

#endif